Clearer executable selection / back button

--- a/src/styles/executable.css
+++ b/src/styles/executable.css
@@ -31,3 +31,11 @@ body > * {
   background-color: #c90100;
   font-size: 1.2em;
 }
+
+code {
+  background: #e9e9e9;
+}
+
+.back-button {
+  display: none;
+}
