--- a/src/styles/launcher.css
+++ b/src/styles/launcher.css
@@ -123,9 +123,9 @@ video {
   position: absolute;
   bottom: 5px;
   left: 5px;
-  color: gray;
+  color: #333;
 }
 
 .patch-text a {
-  color: gray;
+  color: #333;
 }
